# equintk

./: .gitignore  README.md  debug_ntk.py  flake.nix  img_pred.ipynb  nngp_example.py  pyproject.toml
equinn/: __init__.py  ffpe.py  siren.py
equintk/: __init__.py  nngp.py  ntk.py  ntk_predict.py
tests/: test_nngp.py  test_ntk.py  test_ntk_predict.py
